--- a/dokumentace-ifj/dokumentace-ifj.tex
+++ b/dokumentace-ifj/dokumentace-ifj.tex
@@ -64,7 +64,7 @@ Dokument sa skladá z~viacerých častí. V~kapitole \ref{tim} je stručne popí
 \section{Práca v tíme}
 \label{tim}
 
-Keďže sa jednalo o tímoví projekt, na ktorom pracoval tím o 5 členoch, bolo potrebné si určiť opatrenia a metódy spolupráce. Tie sme si stanovili hneď na začiatku vývojového cyklu. Zaviedli sme konvenciu písania kódu, ktorá nám zabezpečila prehľadnosť a jednotnosť projektu. Taktiež sme zaviedli konvenciu písania komentárov, aby spĺňali normu pre vygenerovanie dokumentácie v nástroji \texttt{doxygen}. K spolupráci viacerých ľudí na jednom projekte sme využili vytvorenie vzdialeného privátneho repozitára na servery \texttt{GitHub, Inc.}.
+Keďže sa jednalo o tímový projekt, na ktorom pracoval tím o 5 členoch, bolo potrebné si určiť opatrenia a metódy spolupráce. Tie sme si stanovili hneď na začiatku vývojového cyklu. Zaviedli sme konvenciu písania kódu, ktorá nám zabezpečila prehľadnosť a jednotnosť projektu. Taktiež sme zaviedli konvenciu písania komentárov, aby spĺňali normu pre vygenerovanie dokumentácie v nástroji \texttt{doxygen}. K spolupráci viacerých ľudí na jednom projekte sme využili vytvorenie vzdialeného privátneho repozitára na servery \texttt{GitHub, Inc.}.
 
 Tímovú komuníkaciu a kolaboráciu sme riešili osobnými stretnutiami, ktoré boli približne raz za tri týždňe. Stanovili sme si ciele, ktoré museli byť do najbližšieho stretnutia dosiahnuté.
 
