Adding czechiso + fixing

--- a/dokumentace-ifj/dokumentace.bib
+++ b/dokumentace-ifj/dokumentace.bib
@@ -1,16 +1,11 @@
-@Misc{COV,
-        title = {http://gcovr.com/}
+@article{COV,
+        author= "GCC",
+        title = "gcovr",
+        url = {http://gcovr.com/}
 	}
 
-@Misc{aLLT,
-	 title = {http://smlweb.cpsc.ucalgary.ca/start.html}
-	}
- @Misc{opora,
- 	author               = {Honz{\'{i}}k, Jan},
- 	title                = "ALGORITMY IAL: Studijn{\'{i}} opora",
- 	howpublished         = "online",
- 	edition 			= "Verze:14 Q",
- 	year			= "[b.r.]",
- 	revised        = "7.11.2016",
- 	cited                = "!2016-12-05",
- 	url                  = "https://wis.fit.vutbr.cz/FIT/st/course-files-st.php?file=%2Fcourse%2FIAL-IT%2Ftexts%2FOpora-IAL-2016-verze-16+D.pdf&cid=11418",}
+ @article{opora,
+ 	author               = "Jan Maxmili{\'a} Honz{\'i}k",
+ 	title                = "ALGORITMY IAL: Studijn{\'i} opora",
+        url = "https://wis.fit.vutbr.cz/FIT/st/course-files-st.php?file=%2Fcourse%2FIAL-IT%2Ftexts%2FOpora-IAL-2016-verze-16+D.pdf&cid=11418" 
+ }
