--- a/dokumentace-ifj/dokumentace.tex
+++ b/dokumentace-ifj/dokumentace.tex
@@ -70,9 +70,13 @@
 	\section{Práca v tíme}
 	\label{tim}
 
-	Keďže sa jednalo o~tímový projekt, na ktorom pracoval tím o~5 členoch, bolo potrebné si určiť opatrenia a~metódy spolupráce. Tie sme si stanovili hneď na začiatku vývojového cyklu. Zaviedli sme konvenciu písania kódu, ktorá nám zabezpečila prehľadnosť a jednotnosť projektu. Taktiež sme zaviedli konvenciu písania komentárov, aby spĺňali normu pre vygenerovanie dokumentácie v nástroji \texttt{doxygen}. K spolupráci viacerých ľudí na jednom projekte sme využili vytvorenie vzdialeného privátneho repozitára na serveri \texttt{GitHub, Inc.}.
+	Keďže sa jednalo o~tímový projekt, bolo potrebné si určiť opatrenia a~metódy spolupráce.
+    Zaviedli sme konvenciu písania kódu, ktorá nám zabezpečila prehľadnosť a jednotnosť štýlu kódu.
+    Taktiež sme zaviedli konvenciu písania komentárov, aby spĺňali normu pre vygenerovanie dokumentácie v nástroji \texttt{doxygen}.
+    K spolupráci viacerých ľudí na jednom projekte sme využili privátny repozitár na serveri \texttt{GitHub, Inc.}.
 
-	Tímovú komuníkaciu a kolaboráciu sme riešili osobnými stretnutiami, ktoré boli približne raz za tri týždňe. Stanovili sme si ciele, ktoré museli byť do najbližšieho stretnutia dosiahnuté.
+	Tímovú komuníkaciu a kolaboráciu sme riešili osobnými stretnutiami, ktoré boli približne raz za tri týždňe.
+    Stanovili sme si ciele, ktoré museli byť do najbližšieho stretnutia dosiahnuté.
 
 	\subsection{Rozdelenie úloh}
 	\begin{center}
